# aurora-comms

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  project.yml
.github/workflows/: ci.yml
inc/ac/: app.h  hex.h  io.h  log.h  meta.h  net.h  str.h
inc/ca/: app.h  hex.h  io.h  log.h  meta.h  net.h  string.h
script/: format-all.sh
src/: app.c  io.c  log.c  main.c  net.c  state.c  str.c  string.c
test/: test_map.c  test_str.c
